--- a/MovieNews/base/templates/base/home.html
+++ b/MovieNews/base/templates/base/home.html
@@ -28,7 +28,7 @@
           <h2>Latest News</h2>
           <p>{{room_count}} News found</p>
         </div>
-        {% if check_is_superuser or request.user.moderator  %}
+        {% if check_is_superuser or user.moderator  %}
         <a class="btn btn--main" href="{% url 'create-room' %}">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
             <title>add</title>
